--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -4,7 +4,7 @@
     android:id="@+id/main_activity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.betaonly.transactionviewer.MainActivity">
+    tools:context="com.betaonly.transactionviewer.ui.MainActivity">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/product_list"
