--- a/app/src/main/res/layout/transaction_activity.xml
+++ b/app/src/main/res/layout/transaction_activity.xml
@@ -5,10 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.betaonly.transactionviewer.TransactionActivity">
+    tools:context="com.betaonly.transactionviewer.ui.TransactionActivity">
     <TextView
         android:id="@+id/total"
+        android:textStyle="bold"
+        android:textSize="16sp"
+        android:background="@color/transaction_total_background"
         android:layout_width="match_parent"
+        android:padding="4dp"
         android:layout_height="wrap_content" />
     <android.support.v7.widget.RecyclerView
         android:id="@+id/transaction_list"
