--- a/app/src/main/res/layout/transaction_list_row.xml
+++ b/app/src/main/res/layout/transaction_list_row.xml
@@ -2,15 +2,19 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="@dimen/list_row_padding"
     android:orientation="vertical">
 
     <TextView
         android:id="@+id/amount"
+        android:textSize="16sp"
+        android:textStyle="bold"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
     <TextView
-        android:id="@+id/amount_in_gbp"
+        android:id="@+id/amount_converted"
+        android:textSize="14sp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 </LinearLayout>
