--- a/app/src/main/res/layout/transaction_activity.xml
+++ b/app/src/main/res/layout/transaction_activity.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.betaonly.transactionviewer.ui.TransactionActivity">
+    tools:context="com.betaonly.transactionviewer.ui.transaction.TransactionActivity">
     <TextView
         android:id="@+id/total"
         android:textStyle="bold"
